--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>AI 视频编辑器</title>
 	</head>
-	<body>
+	<body oncontextmenu="return false;">
 		<div id="app"></div>
 		<script src="/js/pixi.js"></script>
 		<script type="module" src="/src/main.js"></script>
